Change Log:
Dec 19, 2007 - Jim Clark
- Properties for carb panel implemented
- Export to html for carb implemented
- Quantity.Converter and ilk now static so a nre Quanity object doesn't need to be instantiated to 
   convert a weight or volume

Dec 18, 2007 - Jim Clark
- Completed functionality of carbonation panel, still doesn't have selectable default settings in
   options dialog.
- Rolled back useing malts.csv and added a new prime_sugar.csv, which is used.

Dec 14, 2007 - Jim Clark
- Completed fermentation schedual functionality (save and xml->html export)
- Revamped xlst to include all data on sheet. Much nicer output now, usable for a brewday sheet.
- Fixed note display and UI panel
- Moved some string lists into their prespective 'home' classes (mash types in Mash for example)
- Added a field to malts.csv to determine if the malt/adjuct is suitable for use as a primeing sugar
- Turned Database into a singleton
- Carbonation prime sugar list comes from malts.cvs
- Saveing and Loading carb data - NOTE does not reflect in carb tab
- Carb tab has lots of TODO left!!!!  It is currently non-functional

Dec 13, 2007 - Jim Clark
- Added fermentation schedual tab and infrastructure. Commented out of StrangeSwing 
   because it is missing save and pring functionality.

Dec 12, 2007 - Jim Clark
Changes to Date from 2.0.1
- Applied Patch 1845484
  - Request 1489276 - Addes configurable default hop type (Leaf, Pellet, Plug)
- Applied Patch 1845847
  - Fixes 1489252 - Text field auto selection 
- Fixed 1493279 - Implimented custom combobox and combobox cell editor to allow better
   UI on tabled combo boxes and to support keyboard navigation
- Request 1497970 - Mash Steps insert at end of list
- Request 1222300 - Added Gravity Teperature Tool Dialog
- Fixes 1480514 - Added selectable user locale which affects date format
- Fixes 1493267 - Changed default bottle unit and size to imperal